--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "material-ui-search-bar": "^1.0.0-beta.14",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
